--- a/package.json
+++ b/package.json
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/RICKCOYL/Restaurant-Page#readme",
   "devDependencies": {
+    "css-loader": "^5.0.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
+  },
+  "dependencies": {
+    "style-loader": "^2.0.0"
   }
 }
