--- a/package.json
+++ b/package.json
@@ -18,10 +18,14 @@
   "homepage": "https://github.com/RICKCOYL/Restaurant-Page#readme",
   "devDependencies": {
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
+    "image-webpack-loader": "^7.0.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
+    "bootstrap": "^4.6.0",
     "style-loader": "^2.0.0"
   }
 }
