--- a/package.json
+++ b/package.json
@@ -20,12 +20,15 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^7.0.1",
+    "sass": "^1.32.5",
+    "sass-loader": "^10.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.18.0",
     "webpack-cli": "^4.4.0"
   },
   "dependencies": {
-    "bootstrap": "^4.6.0",
+    "@popperjs/core": "^2.6.0",
+    "bootstrap": "^5.0.0-beta1",
     "style-loader": "^2.0.0"
   }
 }
