--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "webpack serve --mode=development",
+    "watch": "webpack --watch --mode=development"
   },
   "repository": {
     "type": "git",
@@ -24,7 +26,8 @@
     "sass-loader": "^10.1.1",
     "url-loader": "^4.1.1",
     "webpack": "^5.18.0",
-    "webpack-cli": "^4.4.0"
+    "webpack-cli": "^4.4.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
