--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
+    "boostrap": "^2.0.0",
     "bootstrap": "^5.0.0-beta1",
     "style-loader": "^2.0.0"
   }
