--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack serve --mode=development",
-    "watch": "webpack --watch --mode=development",
+    "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development --open",
     "fix": "stylelint --fix \"**/*.css\" && eslint . --fix",
     "lint": "eslint --fix --ext .js,.css ."
   },
@@ -24,10 +24,11 @@
     "css-loader": "^5.0.1",
     "file-loader": "^6.2.0",
     "image-webpack-loader": "^7.0.1",
+    "npm-install-webpack-plugin": "^4.0.5",
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.18.0",
+    "webpack": "^5.19.0",
     "webpack-cli": "^4.4.0",
     "webpack-dev-server": "^3.11.2"
   },
