--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode production",
-    "start": "webpack serve --mode development --open",
+    "start": "webpack --watch --mode=development",
     "fix": "stylelint --fix \"**/*.css\" && eslint . --fix",
     "lint": "eslint --fix --ext .js,.jsx ."
   },
