--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
     "sass": "^1.32.5",
     "sass-loader": "^10.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "^5.19.0",
-    "webpack-cli": "^4.4.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack": "2.2.0-rc.3",
+    "webpack-dev-server": "2.1.0-beta.0"
   },
   "dependencies": {
     "@popperjs/core": "^2.6.0",
